--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,13 @@ div {
     height:400px;
     margin:30px;
     padding:20px;
-    font-family:sans-serif;
+    font-family: Arial, sans-serif;
     font-size:28px;
     font-weight:bold;
 }
+
+table {
+    border:3px solid blue;
+    color:red;
+}
+
