--- a/styles.css
+++ b/styles.css
@@ -15,18 +15,19 @@ div {
     margin:30px;
     padding:20px;
     font-family: Arial, sans-serif;
-    font-size:28px;
+    font-size:50%;
     font-weight:bold;
 }
 
 table {
     border:3px solid blue;
     color:red;
+    border-collapse:collapse
 }
 
 th, td {
     border: 1px solid black;
-    border-collapse: collapse;
+    border-collapse:collapse;
 }
 
 
